--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -535,42 +535,53 @@
     "toast_error": "There was an error saving your profile."
   },
   "diets_onboarding": {
-    "step1_title": "Nivel de Actividad",
-    "step2_title": "Preferencias",
-    "step3_title": "Detalles Finales",
-    "step1_desc": "¿Cuánto te mueves en tu día a día?",
-    "step2_desc": "Selecciona si tienes alguna preferencia o restricción.",
-    "step2_tip": "Si no tienes ninguna, puedes continuar.",
-    "step3_desc": "Ajusta el plan a tu estilo de vida.",
-    "cooking_time": "Tiempo para cocinar",
-    "budget": "Presupuesto",
-    "next": "Siguiente",
-    "generate_loading": "Generando con IA... (puede tardar 1 min)",
-    "generate": "Generar mi Plan",
-    "generate_wait": "La IA está creando un plan único para ti. Por favor espera...",
-    "toast_success": "¡Tu plan de dieta personalizado está listo!",
-    "toast_error_title": "No se pudo generar el plan",
+    "step1_title": "Activity Level",
+    "step2_title": "Preferences",
+    "step3_title": "Final Details",
+    "step_country_title": "Country",
+    "step_country_desc": "Select your country to personalize meals with local ingredients.",
+    "select_country": "Select country...",
+    "search_country": "Search country...",
+    "auto_detect": "Detect my location",
+    "step1_desc": "How much do you move daily?",
+    "step2_desc": "Select if you have any preference or restriction.",
+    "step2_tip": "If none, you can continue.",
+    "step3_desc": "Adjust the plan to your lifestyle.",
+    "cooking_time": "Cooking Time",
+    "budget": "Budget",
+    "next": "Next",
+    "generate_loading": "Generating with AI... (approx 1 min)",
+    "generate": "Generate My Plan",
+    "generate_wait": "AI is creating a unique plan for you. Please wait...",
+    "toast_success": "Your personalized diet plan is ready!",
+    "toast_error_title": "Could not generate plan",
     "preferences": {
-      "vegetarian": "Vegetariano",
-      "lactose_free": "Sin lactosa",
-      "sugar_free": "Sin azúcar",
-      "gluten_free": "Sin gluten"
+      "vegetarian": "Vegetarian",
+      "lactose_free": "Lactose Free",
+      "sugar_free": "Sugar Free",
+      "gluten_free": "Gluten Free"
     },
     "activity": {
-      "sedentary": "Sedentario",
-      "sedentary_desc": "Poco o nada de ejercicio",
-      "light": "Ligero",
-      "light_desc": "Ejercicio suave 1-3 días/sem",
-      "moderate": "Moderado",
-      "moderate_desc": "Ejercicio moderado 3-5 días/sem",
-      "high": "Alto",
-      "high_desc": "Ejercicio fuerte 6-7 días/sem"
+      "sedentary": "Sedentary",
+      "sedentary_desc": "Little or no exercise",
+      "light": "Light",
+      "light_desc": "Light exercise 1-3 days/week",
+      "moderate": "Moderate",
+      "moderate_desc": "Moderate exercise 3-5 days/week",
+      "high": "High",
+      "high_desc": "Hard exercise 6-7 days/week"
     },
     "levels": {
-      "low": "Bajo",
-      "medium": "Medio",
-      "high": "Alto"
-    }
+      "low": "Low",
+      "medium": "Medium",
+      "high": "High"
+    },
+    "generating_step1": "Analyzing activity and preferences...",
+    "generating_step2": "Exploring local cuisine of {{country}}...",
+    "generating_step2_generic": "Exploring healthy recipes...",
+    "generating_step3": "Calculating optimal macros...",
+    "generating_step4": "Designing weekly menu...",
+    "generating_step5": "Finalizing details..."
   },
   "subscribe": {
     "title": "Vuélvete Premium",
